made new changes

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="column large-half medium-full">
           <ul class="about-sched">
             <li>
-              <h4>Main Church Service</h4>
+              <h4 class="subhead">Main Church Service</h4>
               <p>
                 Sunday<br />
                 English service - 8:00 AM - 9:30 AM <br />
@@ -114,7 +114,7 @@
               </p>
             </li>
             <li>
-              <h4>Prayer Meeting</h4>
+              <h4 class="subhead">Prayer Meeting</h4>
               <p>Wednesday - 7:00 PM <br /></p>
             </li>
           </ul>
@@ -144,11 +144,12 @@
             <a href="#0" title="">Shiloh Revival 2022</a>
           </h3>
           <p>
-            Et consequatur nihil odio odit voluptatem qui. Dolores doloribus
-            cupiditate totam esse dolores quod. Magni aut incidunt fugiat labore
-            est ut non ipsam nihil. Voluptate rerum dolores unde voluptas. Et
-            similique praesentium dolor. Et quod eius sint at quae est dolores.
-            Beatae quo facere hic.
+
+            The annual Shiloh revival is a power packed program where God listens and 
+            answers the prayers of his people. Ministers of God will be available to teach 
+            and impact the word of God.
+            The theme for this year is the Season Of Glory.
+            Come and experience the powers of God like never before!
           </p>
           <ul class="events-list__meta">
             <li class="events-list__meta-date"> October 25th - 28th 2022</li>
@@ -176,14 +177,14 @@
 
       <div class="row row-y-center series-content">
         <div class="column large-half medium-full">
-          <h3 class="subhead">Current Series</h3>
+          <h3 class="subhead">Listen to God's Word</h3>
           <h2>Shape Your Life with the Words of Life.</h2>
           <p>
-            Aut sed amet et quis aliquid laborum minus consequatur. Animi
-            repellendus quas. Est voluptates minima ut dolorum aliquid sint.
-            Ratione et et molestias rerum quibusdam. Deserunt suscipit ut
-            expedita. Non numquam aut eum perferendis molestiae praesentium
-            aliquid voluptatum numquam dolorum aliquid sint minima.
+            Not underestimating the power of God’s Word can change a person’s life,
+             The bible says "so is my word that goes out from my mouth: 
+            It will not return to me empty, but will accomplish what I desire and achieve the
+             purpose for which I sent it." God’s Word can bring change in your 
+            life when nothing else can or will.
           </p>
         </div>
         <!-- end column -->
@@ -191,21 +192,14 @@
         <div class="column large-half medium-full">
           <div class="series-content__buttons">
             <a href="" class="btn btn--large h-full-width">Watch the Video</a>
-            <a href="" class="btn btn--large h-full-width"
-              >Listen To the Message</a
-            >
           </div>
 
           <div class="series-content__subscribe">
             <p>
-              Never missed a message. Subscribe to our YouTube and Podcast
-              channels.
+              Never miss a message. Subscribe to our YouTube channel
             </p>
 
             <ul class="series-content__subscribe-links">
-              <li class="ss-apple-podcast"><a href="#0">Apple Podcast</a></li>
-              <li class="ss-spotify"><a href="#0">Spotify</a></li>
-              <li class="ss-soundcloud"><a href="#0">SoundCloud</a></li>
               <li class="ss-youtube"><a href="#0">Youtube</a></li>
             </ul>
           </div>
@@ -247,7 +241,7 @@
         <div class="column">
           <ul class="social-list">
             <li class="social-list__item">
-              <a href="#0" title="">
+              <a href="https://www.facebook.com/thesaltfactoryfellowship" target="_blank" title="">
                 <span
                   class="social-list__icon social-list__icon--facebook"
                 ></span>
@@ -255,15 +249,15 @@
               </a>
             </li>
             <li class="social-list__item">
-              <a href="#0" title="">
+              <a href="https://www.tiktok.com/@olorundabaptist" target="_blank" title="">
                 <span
                   class="social-list__icon social-list__icon--twitter"
                 ></span>
-                <span class="social-list__text">Twitter</span>
+                <span class="social-list__text">TikTok</span>
               </a>
             </li>
             <li class="social-list__item">
-              <a href="#0" title="">
+              <a href="https://www.instagram.com/olorunda_baptist_church/" target="_blank" title="">
                 <span
                   class="social-list__icon social-list__icon--instagram"
                 ></span>
@@ -271,7 +265,7 @@
               </a>
             </li>
             <li class="social-list__item">
-              <a href="#0" title="">
+              <a href="mailto:olorundabaptistchurch229@gmail.com" target="_blank" title="">
                 <span class="social-list__icon social-list__icon--email"></span>
                 <span class="social-list__text">Email</span>
               </a>
