fix responsive issue

--- a/index.html
+++ b/index.html
@@ -253,13 +253,9 @@
       <li><img src="https://res.cloudinary.com/dharme/image/upload/v1666214633/gallery03_tyixc9.jpg" alt=""></li>
       <li> <img src="https://res.cloudinary.com/dharme/image/upload/v1666214626/gallery08_asmve9.jpg" alt="">
       </li>
-      <li>
-        < <img src="https://res.cloudinary.com/dharme/image/upload/v1666214841/gallery02_vwu7s8.jpg" alt="">
-      </li>
-      <li> <img src="https://res.cloudinary.com/dharme/image/upload/v1666214068/gallery04_ibqpef.jpg" alt="">
-      </li>
-      <li> <img src="https://res.cloudinary.com/dharme/image/upload/v1666214593/gallery06_lnvw9h.jpg" alt="">
-      </li>
+      <li><img src="https://res.cloudinary.com/dharme/image/upload/v1666214841/gallery02_vwu7s8.jpg" alt=""></li>
+      <li> <img src="https://res.cloudinary.com/dharme/image/upload/v1666214068/gallery04_ibqpef.jpg" alt=""></li>
+      <li> <img src="https://res.cloudinary.com/dharme/image/upload/v1666214593/gallery06_lnvw9h.jpg" alt=""></li>
     </ul>
     <a id="prev" href="#">&#8810;</a>
     <a id="next" href="#">&#8811;</a>
