fix routing issue

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         </h1>
 
         <div class="hero-content__buttons">
-          <a href="events.html" class="btn btn--stroke">Upcoming Events</a>
-          <a href="about.html" class="btn btn--stroke">About Us</a>
+          <a href="#events" class="btn btn--stroke">Upcoming Events</a>
+          <a href="#about" class="btn btn--stroke">About Us</a>
         </div>
       </div>
       <!-- end hero-content__text -->
@@ -111,12 +111,16 @@
               Sunday<br />
               English service - 8:00 AM - 9:30 AM <br />
               Yoruba Service - 10:30 AM - 12:30 PM <br />
-              Sunday School & DTM - 9:30 AM - 10:30 AM
+              Sunday School - 9:30 AM - 10:00 AM
+              DTM - 10:00 AM - 10:30 AM
             </p>
           </li>
           <li>
             <h4 class="subhead">Prayer Meeting</h4>
-            <p>Wednesday - 7:00 PM <br /></p>
+            <p>Wednesday <br />
+              Shiloh Prayer Service - 9:00 AM - 12:00 PM<br/>
+              Hour of Breakthrough - 7:00 PM - 8:00 PM <br />
+              </p>
           </li>
         </ul>
         <!-- end about-sched-->
@@ -347,8 +351,6 @@
     <div class="row footer-bottom">
       <div class="column ss-copyright">
         <span>© Copyright OBC 2022</span>
-        <span>Designed & Developed by
-          <a href="https://www.styleshout.com/">Dharmelolar</a></span>
       </div>
     </div>
     <!-- footer-bottom -->
