--- a/index.html
+++ b/index.html
@@ -223,32 +223,32 @@
     <div class="entire-content">
       <div class="content-carrousel">
         <figure class="shadow"><img
-            src="https://res.cloudinary.com/dharme/image/upload/v1666214032/gallery05_b7cfpe.jpg" /></figure>
+            src="https://res.cloudinary.com/dharme/image/upload/v1666958270/IMG_6345_ekydvv.jpg" /></figure>
         <figure class="shadow"><img
-            src="https://res.cloudinary.com/dharme/image/upload/v1666214688/gallery07_vhkl4g.jpg" /></figure>
+            src="https://res.cloudinary.com/dharme/image/upload/v1666958286/IMG_7168_krxbsv.jpg" /></figure>
         <figure class="shadow"><img
-            src="https://res.cloudinary.com/dharme/image/upload/v1666214572/gallery01_cteaia.jpg" /></figure>
+            src="https://res.cloudinary.com/dharme/image/upload/v1666958286/PHOTO-2022-06-05-13-08-44_1_kvbaie.jpg" /></figure>
         <figure class="shadow">
-          <img src="https://res.cloudinary.com/dharme/image/upload/v1666214726/gallery09_o2m4j2.jpg" />
+          <img src="https://res.cloudinary.com/dharme/image/upload/v1666958282/IMG_6324_ihowxo.jpg" />
         </figure>
         <figure class="shadow">
-          <img src="https://res.cloudinary.com/dharme/image/upload/v1666214633/gallery03_tyixc9.jpg" />
+          <img src="https://res.cloudinary.com/dharme/image/upload/v1666958273/IMG_6360_1_tn7nfq.jpg" />
         </figure>
         <figure class="shadow"><img
-            src="https://res.cloudinary.com/dharme/image/upload/v1666214626/gallery08_asmve9.jpg" /></figure>
+            src="https://res.cloudinary.com/dharme/image/upload/v1666958271/IMG_7145_z7mjee.jpg" /></figure>
         <figure class="shadow"><img
-            src="https://res.cloudinary.com/dharme/image/upload/v1666214841/gallery02_vwu7s8.jpg" /></figure>
+            src="https://res.cloudinary.com/dharme/image/upload/v1666958270/IMG_6345_ekydvv.jpg" /></figure>
         <figure class="shadow"><img
-            src="https://res.cloudinary.com/dharme/image/upload/v1666214068/gallery04_ibqpef.jpg" /></figure>
+            src="https://res.cloudinary.com/dharme/image/upload/v1666958269/IMG_6033_ditb0n.jpg" /></figure>
         <figure class="shadow"><img
-            src="https://res.cloudinary.com/dharme/image/upload/v1666214593/gallery06_lnvw9h.jpg" /></figure>
+            src="https://res.cloudinary.com/dharme/image/upload/v1666958256/IMG_3763_mrral2.jpg" /></figure>
       </div>
     </div>
   </section>
 
   <!---Gallery Mobile-->
 
-  <div id="slider">
+  <!-- <div id="slider">
     <ul id="slideWrap">
       <li><img src="https://res.cloudinary.com/dharme/image/upload/v1666214032/gallery05_b7cfpe.jpg" alt=""></li>
       <li><img src="https://res.cloudinary.com/dharme/image/upload/v1666214688/gallery07_vhkl4g.jpg" alt=""></li>
@@ -263,7 +263,7 @@
     </ul>
     <a id="prev" href="#">&#8810;</a>
     <a id="next" href="#">&#8811;</a>
-  </div>
+  </div> -->
   <!----Gallery-->
 
   <!-- Social
