made new changes

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
         <div class="row hero-content">
             <div class="column large-full hero-content__text">
                 <h1>
-                    Our Year <br />
-                    of Divine<br />
-                    Upliftment
+                    Our Year of <br />
+                    Fortune Restore<br />
                 </h1>
 
                 <div class="hero-content__buttons">
@@ -91,27 +90,6 @@
         <!-- end hero-content -->
     </section> <!-- end hero-content -->
 
-    <!-- <ul class="hero-social">
-        <li class="hero-social__title">Follow Us</li>
-        <li>
-            <a href="#0" title="">Facebook</a>
-        </li>
-        <li>
-            <a href="#0" title="">YouTube</a>
-        </li>
-        <li>
-            <a href="#0" title="">Instagram</a>
-        </li>
-    </ul> -->
-
-    <!-- end hero-social -->
-
-    <!-- <div class="hero-scroll">
-        <a href="#about" class="scroll-link smoothscroll">
-            Scroll For More
-        </a>
-    </div>  -->
-    <!-- end hero-scroll -->
 
     </section> <!-- end s-hero -->
 
@@ -140,7 +118,7 @@
                             <span style="font-weight: bold;">Sunday</span><br />
                             English service - 8:00 AM - 9:30 AM <br />
                             Yoruba Service - 10:30 AM - 12:30 PM <br />
-                            Sunday School - 9:30 AM - 10:00 AM <br/>
+                            Sunday School - 9:30 AM - 10:00 AM <br />
                             DTM - 10:00 AM - 10:30 AM
                         </p>
                     </li>
@@ -172,28 +150,63 @@
         <div class="row block-large-1-2 block-900-full events-list">
             <div class="column events-list__item">
                 <h3 class="display-1 events-list__item-title">
-                    <a href="#0" title="">Annual Harvest Thanksgiving 2022</a>
+                    <a href="#0" title="">60th Church Anniversary 2023</a>
                 </h3>
                 <p>
 
-                    Annual Thanksgiving is dedicated to appreciating God for his for the wonderful 
-                    things he has done and we also acknowledge his Good works.
-                    Join us this Sunday as we exalt the our maker through praises and songs of thanksgiving
-                    Come and experience the praises like never before!
+                    Celebrate with us as we mark a remarkable
+                    milestone - our church's 60th anniversary. Join us as we celebrate God's faithfulness and mercies as
+                    we reflect on the six decades of
+                    faith, and fellowship that have brought us to this joyous occasion
                 </p>
                 <ul class="events-list__meta">
-                    <li class="events-list__meta-date"> November 13th, 2022.</li>
-                    <li class="events-list__meta-time">9:00 AM</li>
+                    <li class="events-list__meta-date"> October 23rd - 29th, 2023.</li>
+                    <li class="events-list__meta-time">See Flyer for Details</li>
                     <li class="events-list__meta-location">
-                        Church Auditorium
+                        Church Auditorium - 28, Somosu Street, Aguda, Surulere, Lagos.
                     </li>
                 </ul>
             </div>
             <!-- end events-list__item -->
             <div class="column events-list__item">
                 <h3 class="display-1 events-list__item-title">
-                    <img
-                        src="https://res.cloudinary.com/dharme/image/upload/v1668182099/103590b3-e57e-4a5d-964d-fbeb5894d7ea_mya8du.jpg" />
+                    <img src="https://res.cloudinary.com/dharme/image/upload/v1697012493/church-_anniversary_zb6byd.jpg"
+                        style=" height: 500px; object-fit: cover;" />
+            </div>
+            <!-- end events-list__item -->
+        </div>
+
+
+        <div class="row block-large-1-2 block-900-full events-list">
+            <div class="column events-list__item">
+                <h3 class="display-1 events-list__item-title">
+                    <a href="#0" title=""> Shiloh Revival Special Guest Performance</a>
+                </h3>
+                <p>
+
+                    Shiloh Revival is a time of prayer and calling out to God. During this special season, we gather in
+                    prayer, seeking His guidance, strength, and blessings as we come together in unity and faith.
+
+                    &nbsp;
+
+                    This year's Shiloh Revival will feature a captivating performance by a renowned gospel artist,and we
+                    pormise it will be
+                    a soul-stirring and memorable experience.<br />
+                    Dont miss it!
+                </p>
+                <ul class="events-list__meta">
+                    <li class="events-list__meta-date"> October 25th, 2023.</li>
+                    <li class="events-list__meta-time">6:00 PM - 8:00 PM</li>
+                    <li class="events-list__meta-location">
+                        Church Auditorium - 28, Somosu Street, Aguda, Surulere, Lagos.
+                    </li>
+                </ul>
+            </div>
+            <!-- end events-list__item -->
+            <div class="column events-list__item">
+                <h3 class="display-1 events-list__item-title">
+                    <img src="https://res.cloudinary.com/dharme/image/upload/v1697012493/shiloh_revival_py0n5r.jpg"
+                        style=" height: 500px; object-fit: cover;" />
             </div>
             <!-- end events-list__item -->
         </div>
@@ -240,7 +253,7 @@
         <!-- series-content -->
     </section><!-- end s-series -->
     <!-- Gallery -->
-    <section class="gallery">
+    <section class="gallery" >
         <h2 class="gallery-header">Gallery</h2>
         <div class="gallery-img-container">
             <img src="https://res.cloudinary.com/dharme/image/upload/v1666958286/IMG_7168_krxbsv.jpg" />
@@ -347,7 +360,7 @@
         <!-- end footer-top -->
         <div class="row footer-bottom">
             <div class="column ss-copyright">
-                <span>© Copyright OBC 2022</span>
+                <span>© Copyright OBC 2023</span>
             </div>
         </div>
         <!-- footer-bottom -->
