made new change

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     &nbsp;
 
                     This year's Shiloh Revival will feature a captivating performance by a renowned gospel artist,and we
-                    pormise it will be
+                    promise it will be
                     a soul-stirring and memorable experience.<br />
                     Dont miss it!
                 </p>
